# libgit2cpp_conan_recipe

./: CMakeLists.txt  conanfile.py  create.bat  upload.bat
